syntax = "proto3";
package proto.v1;
option go_package = "github.com/hnimtadd/run/pb";

message HTTPRequest {
  bytes body = 1;
  string method = 2;
  string url = 3;
  string endpoint_id = 4;
  map<string,string> env = 5;
  map<string, HeaderFields> header = 6;
  string runtime = 7;
  string deployment_id = 8;
  string id = 9;
}

message HeaderFields {
  repeated string fields = 1;
}

message HTTPResponse {
  bytes body = 1;
  int32 code = 2;
  string request_id = 3;
}
